[package]
name = "rocket-webapi-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]